--- a/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
+++ b/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SH_Main_Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SH_Main_Menu.Designer.cs">
+      <DependentUpon>SH_Main_Menu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -65,6 +71,9 @@
     </Compile>
     <EmbeddedResource Include="SH_Loading_Window.resx">
       <DependentUpon>SH_Loading_Window.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SH_Main_Menu.resx">
+      <DependentUpon>SH_Main_Menu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
