[THS] Add Shifrator Event Class for Shifrate/Deshifrate Logic.

--- a/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
+++ b/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SHIFRATOR_Event.cs" />
     <Compile Include="SH_Main_Menu.cs">
       <SubType>Form</SubType>
     </Compile>
