--- a/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
+++ b/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{76C022B4-15AB-4253-8942-72D0557981FC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>IV_SHIFRATOR_MAIN</RootNamespace>
-    <AssemblyName>IV_SHIFRATOR_MAIN</AssemblyName>
+    <AssemblyName>IV_Shifrator</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -27,10 +27,13 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>.\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ths_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -88,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ths_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
