--- a/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
+++ b/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
@@ -36,6 +36,9 @@
     <ApplicationIcon>ths_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Siticone.Desktop.UI, Version=2.0.9.0, Culture=neutral, PublicKeyToken=422d444a8a9fa6db, processorArchitecture=MSIL">
+      <HintPath>packages\Siticone.Desktop.UI.2.0.9\lib\net40\Siticone.Desktop.UI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -80,6 +83,7 @@
     <EmbeddedResource Include="SH_Main_Menu.resx">
       <DependentUpon>SH_Main_Menu.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
