--- a/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
+++ b/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
@@ -36,6 +36,10 @@
     <ApplicationIcon>ths_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IVConsole, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\IVConsole.dll</HintPath>
+    </Reference>
     <Reference Include="Siticone.Desktop.UI, Version=2.0.9.0, Culture=neutral, PublicKeyToken=422d444a8a9fa6db, processorArchitecture=MSIL">
       <HintPath>packages\Siticone.Desktop.UI.2.0.9\lib\net40\Siticone.Desktop.UI.dll</HintPath>
     </Reference>
