[THS] Update Control Anim Code.

--- a/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
+++ b/IV_SHIFRATOR_MAIN/IV_SHIFRATOR_MAIN.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Shared\IVControlAnim_Event.cs" />
     <Compile Include="SH_Loading_Window.cs">
       <SubType>Form</SubType>
     </Compile>
