--- a/IV_Console/IV_Console.csproj
+++ b/IV_Console/IV_Console.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>IV_Console_Window.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\IVControlAnim_Event.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ths_icon.ico" />
